# Main_Parser

./: Cargo.toml  Makefile  Readme.md  output.txt
src/: json.pest  lib.rs  main.rs  parser.rs
src/grammar/: json.pest  schema.json  test.json
tests/: tests.rs
